--- a/src/html/docker.html
+++ b/src/html/docker.html
@@ -1,7 +1,8 @@
 <div id="refresh-icon">
-    <button class="docker-button">
+    <i class="fa fa-refresh fa-2x"></i>
+    <!--<button class="docker-button">
         Refresh
-    </button>
+    </button>-->
 </div>
 <div id="battery-icon"></div>
 <div id="wifi-icon"></div>
