--- a/src/html/docker.html
+++ b/src/html/docker.html
@@ -1,8 +1,9 @@
-<div id="refresh-icon">
-    <i class="fa fa-refresh fa-2x"></i>
-    <!--<button class="docker-button">
-        Refresh
-    </button>-->
+<div id="refresh-container">
+    <i class="fa fa-refresh fa-4x"></i>
 </div>
-<div id="battery-icon"></div>
-<div id="wifi-icon"></div>
+<div id="battery-container">
+    <span id="battery-color">
+        <i id="battery-icon"></i>
+    </span>
+</div>
+<div id="wifi-container"></div>
