--- a/extension/html/docker.html
+++ b/extension/html/docker.html
@@ -6,4 +6,8 @@
         <i id="battery-icon"></i>
     </span>
 </div>
-<!--<div id="wifi-container"></div>-->
+<div id="panasonic-container">
+    <span id="panasonic-icon">
+        <i class="fa fa-cogs fa-4x"></i>
+    </span>
+</div>
