Better host_application

--- a/extension/html/docker.html
+++ b/extension/html/docker.html
@@ -11,3 +11,7 @@
         <i class="fa fa-cogs fa-4x"></i>
     </span>
 </div>
+<div id="wifi-container">
+    <span id="wifi-icon">
+    </span>
+</div>
